<resources>
    <string name="app_name">TUS Santander</string>
    <string name="waitData">Obteniendo datos</string>
    <string name="hint_search">Buscar...</string>
    <string name="refresca">Actualizar</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="title_activity_favs">Favoritos</string>
    <string name="title_activity_lineas">Lineas</string>
    <string name="title_activity_paradas">Paradas</string>
    <string name="title_activity_tarifas">Tarifas</string>
    <string name="title_activity_restricciones">Restricciones</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <string name="title_activity_estimaciones">Estimaciones</string>
    <string name="title_activity_serviciosAlternativos">Transportes Alternativos</string>
    <string name="cargando">Cargando</string>
    <string name="no_encontrado">No hay resultados</string>
</resources>
